Feat: "날씨 API 호출"
Feat: "날씨 API 호출"

- json 데이터를 객체로 변환하기 위한 의존성 추가
- excel 파일 데이터를 캐시에 저장하기 위한 의존성 추가
- 기상청 날씨 API 호출 이후, 코드 값을 실제 값으로 변환 처리
- 주소(ex. 서울특별시)와 같이 문자열 데이터를 캐시에 저장된 값과 비교하여 좌표 값으로 변환 처리
- 현재 시간 기점의 날씨와 오늘 시간별 날씨 데이터를 반환하는 API 개발

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'org.apache.poi:poi-ooxml:4.1.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
