--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
           distribution: 'temurin'
           
       - name: Build with Gradle
-        run: ./gradlew build
+        run: chmod +x ./gradlew build
 
       - name: Docker build & push to prod
         if: contains(github.ref, 'master')
