--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,8 +28,8 @@ jobs:
           docker build -f Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/oneul-server .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/oneul-server
 
-      - name: Docker build & push to dev
-        if: contains(github.ref, 'dev')
+      - name: Docker build & push to develop
+        if: contains(github.ref, 'develop')
         run: |
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
           docker build -f Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/oneul-server .
@@ -50,7 +50,7 @@ jobs:
             sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/oneul-server
             sudo docker image prune -f
 
-      - name: Deploy to dev
+      - name: Deploy to develop
         uses: appleboy/ssh-action@master
         id: deploy-dev
         if: contains(github.ref, 'develop')
