--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,12 @@ jwt:
   key: ${api.jwt.key}
 weather:
   key: ${api.weather.key}
+
+springdoc:
+  packages-to-scan: com.swyg.oneului
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
