Setting: 개발환경 배포 파이프라인 구축

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,24 +16,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 운영환경 프로퍼티
-#      - name: make application-prod.yml
-#        if: |
-#          contains(github.ref, 'main') ||
-#          contains(github.ref, 'develop')
-#        run: |
-#          cd ./src/main/resources
-#          touch ./application-prod.yml
-#          echo "${{ secrets.YML_PROD }}" > ./application-prod.yml
-#        shell: bash
-
       # 개발환경 프로퍼티
       - name: make application-dev.yml
-        if: |
-          contains(github.ref, 'develop')
+        if: contains(github.ref, 'develop')
         run: |
-          rm -f ./src/main/resources/application-dev.yml
-          echo "${{ secrets.YML_DEV }}" > ./src/main/resources/application-dev.yml
+          cd ./src/main/resources
+          touch ./application-dev.yml
+          echo "${{ secrets.YML_DEV }}" > ./application-dev.yml
         shell: bash
 
       # 빌드
