--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,7 @@ springdoc:
   packages-to-scan: com.swyg.oneului
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
+  use-fqn: true
   swagger-ui:
     path: /swagger-ui.html
     tags-sorter: alpha
