Feat: "소스코드 리팩토링"
Feat: "소스코드 리팩토링"

- 기존 회원 엔티티에서 관리하던 RefreshToken을 캐쉬로 관리할 수 있도록 소스코드 수정
- 캐쉬 만료일은 RefreshToken 시간과 동일하게 하루로 설정
- 그 외 필요없는 소스코드 삭제 및 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  cache:
+    ehcache:
+      config: classpath:ehcache.xml
   devtools:
     restart:
       enabled: false
@@ -35,6 +38,7 @@ jwt:
   key: ${api.jwt.key}
 weather:
   key: ${api.weather.key}
+  url: ${api.weather.url}
 
 springdoc:
   packages-to-scan: com.swyg.oneului
